fix: text align of category result category names

--- a/public/main.css
+++ b/public/main.css
@@ -437,6 +437,10 @@ ul {
     text-align: center;
 }
 
+#positions-search-result div {
+    text-align: left;
+}
+
 #positions-search-result > a {
     margin-top: 50%;
 }
